# bream-delta

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: unit_test_with_coverage.yml
bream_delta/: __init__.py  _delta_source.py
tests/: conftest.py  test_delta_source.py
